--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,17 @@ html, body {
     color:rgb(0, 117, 255);
     font-weight: 900;
     padding: 5px 30px;  
+
 }
 #container {
     border-radius: 10px;
-    height:100%;
+    /* height:100%; */
+    /* flex:1; */
+    display: flex;
 }
 #second {
     display:flex;
+    flex:1;
 }
 #top, #bottom {
     background-color: rgb(165, 165, 165);
@@ -83,8 +87,16 @@ html, body {
     background-color: rgb(60, 60, 60);
     margin:-1px;
     border:1px dotted cyan;
-    flex:1;
     user-select: none;   
+}
+#grid {
+    display: flex;
+    flex-direction: column;
+    height:100%;
+}
+#gridtop, #gridbottom {
+    flex:1;
+    background-color: rgb(165, 165, 165);
 }
 
 .row {
@@ -133,10 +145,10 @@ html, body {
     flex-direction: column;
     color:white;
     width:50%;
+    flex:1;
 }
 #footerup {
     flex:1;
-    height:100%;
 }
 #copyright {
     background-color:rgb(165, 165, 165);
