--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
     border-radius: 10px;
     display:flex;
     flex-direction: column;
+    overflow:hidden;
 }
 #second {
     display:flex;
